--- a/meta.yaml
+++ b/meta.yaml
@@ -1,9 +1,11 @@
 package:
   name: timemory
-  version: '2.3.1'
+  version: '2.4.0'
 
 build:
   number: 0
+  script:
+      - "{{ PYTHON }} -m pip install . --no-deps --ignore-installed --no-cache-dir -vvv"
 
 source:
   git_rev: 6836f35ecdfe3a694fdc03246f1040bae4726e92
@@ -11,28 +13,39 @@ source:
 
 requirements:
   host:
-  - python
-  - setuptools
-  - cmake
-
+    - {{ compiler('c') }}
+    - {{ compiler('cxx') }}
+    - python {{ python }}
+    - scikit-build
+    - {{ mpi }}
   run:
-  - python
-  - pillow
-  - matplotlib
-  - numpy
+    - python {{ python }}
+    - pillow
+    - matplotlib
+    - numpy
+    - {{ mpi }}
 
 test:
   imports:
-  - timemory
-  - timemory.format
-  - timemory.mpi_support
-  - timemory.options
-  - timemory.plotting
-  - timemory.signals
-  - timemory.units
-  - timemory.util
+    - timemory
+    - timemory.format
+    - timemory.mpi_support
+    - timemory.options
+    - timemory.plotting
+    - timemory.signals
+    - timemory.units
+    - timemory.util
 
 about:
-  home: https://jrmadsen.github.io/TiMemory/
+  home: https://github.com/jrmadsen/TiMemory
   license: MIT
-  summary: "Cross-language (C, C++ and/or Python) Timing + Memory Measurements including auto-timers and temporary memory calculation"
+  license_family: MIT
+  license_file: LICENSE
+  doc_url: https://jrmadsen.github.io/TiMemory/
+  dev_url: https://github.com/jrmadsen/TiMemory
+  summary: "Cross-language (C, C++ and/or Python) timing + memory measurements
+including auto-timers and temporary memory calculation"
+
+extra:
+  recipe-maintainers:
+    - jrmadsen
