--- a/.travis.yml
+++ b/.travis.yml
@@ -500,7 +500,7 @@ install:
     - export SOURCE_DIR=${PWD}
     - export TIMEMORY_VERBOSE=4
     - export TIMEMORY_OUTPUT_TOTAL=1
-    - pip install matplotlib numpy pillow
+    - pip install -U -r requirements.txt
     - mkdir -p build-timemory
     - cd build-timemory
     - export BUILD_DIR=${PWD}
