CI + TiMemoryConfig + Test updates
- Removed Python 3.4 from TiMemory
- Fixed Win32 issue with TiMemoryConfig
- Fix number of threads for test_cxx_timing and test_cxx_mpi_timing (4)

--- a/cmake/Templates/TiMemoryConfig.cmake.in
+++ b/cmake/Templates/TiMemoryConfig.cmake.in
@@ -129,7 +129,8 @@ set(@PROJECT_NAME@_CXX_STANDARD_REQUIRED @CMAKE_CXX_STANDARD_REQUIRED@)
 #   Definitions
 #------------------------------------------------------------------------------#
 set(@PROJECT_NAME@_DEFINITIONS @TiMemory_DEFINITIONS@)
-if(NOT @BUILD_SHARED_LIBS@ AND WIN32)
+set(DYNAMIC_LINK @BUILD_SHARED_LIBS@)
+if(NOT DYNAMIC_LINK AND WIN32)
     list(APPEND @PROJECT_NAME@_DEFINITIONS _TIMEMORY_ARCHIVE)
 endif()
 
